# CapsWriter-Offline-Windows-Edit

./: .gitignore  config.py  core_client.py  hot-en.txt  hot-rule.txt  hot-zh.txt  pyproject.toml  readme-raw.md  readme.md  requirements-web.txt  start_web.py  vercel.json  web_client.py  web_ui.html
models/: 模型下载方式.txt
templates/: index.html
util/: client_adjust_srt.py  client_check_websocket.py  client_console.py  client_cosmic.py  client_file_cosmic.py  client_format_text.py  client_hot_update.py  client_quicker.py  client_recv_result.py  client_rename_audio.py  client_send_audio.py  client_shortcut_handler.py  client_show_tips.py  client_stream.py  client_transcribe.py  hot_sub_rule.py
