[project]
name = "caps-writer-offline"
version = "1.0.0"
description = "CapsWriter Offline Windows Application"
requires-python = ">=3.10"

dependencies = [
    "websockets>=16.0,<17.0",
    "pypinyin>=0.55.0,<0.56.0",
    "Flask>=3.1.2,<4.0.0",
    "rich>=14.2.0,<15.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "sounddevice>=0.5.3,<0.6.0",
    "Werkzeug>=3.0.0,<4.0.0",
    "Jinja2>=3.1.0,<4.0.0",
    "click>=8.0.0,<9.0.0",
    "itsdangerous>=2.0.0,<3.0.0",
    "blinker>=1.0.0,<2.0.0",
    "cffi>=1.15.0,<2.0.0",
    "pycparser>=2.20,<3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 1. 开启这个选项，Setuptools 才会去读取 MANIFEST.in 并包含 txt
include-package-data = true

# --- 新增的修复配置 ---
[tool.setuptools.packages.find]
where = ["."]
# 假设 'internal' 是你的代码包，我们包含它
include = ["util*", "*.txt"]
# 排除报错中提到的资源文件夹
exclude = ["assets*", "models*", "templates*"]

# 如果 web_client.py 也是必须的模块，可以取消下面这行的注释
# [tool.setuptools]
# py-modules = ["web_client"]

# Vercel 配置
[tool.vercel]
functions = "web_client.py"
output-directory = "."